# kwin-ease-cursor-crossing

./: .gitignore  CMakeLists.txt  README.md  release.sh
kcm/: CMakeLists.txt  kcm.cpp  kcm.h  kcm_easecursorcrossing.json
kcm/ui/: main.qml
src/: easecursorfilter.cpp  easecursorfilter.h  main.cpp  metadata.json
tests/: fakeinput.c  run.sh
